--- a/trabajofinal/settings.html
+++ b/trabajofinal/settings.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-	  <title>Oscar Eduardo Ortiz Pinzon</title>	
+	  <title>Oscar Eduardo Ortiz Pinzon</title>
 	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	  <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
@@ -43,15 +43,13 @@
                 <li class="demo_li"><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><div><i class="fa fa-envelope"></i></div><div>E-mail</div></a></li>
                 <li class="demo_li"><a href="https://outlook.live.com/owa/?path=/calendar" target="_blank"><div><i class="fa fa-clock-o"></i></div><div>Timer</div></a></li>
                 <li class="demo_li"><a href="https://onedrive.live.com/?id=root&cid=DE0248139C56F487" target="_blank"><div><i class="fa fa-folder"></i></div><div>Files</div></a></li>
-                <li class="demo_li"><a href="#"><div><i class="fa fa-heart-o"></i></div><div>Favourites</div></a></li>
+                <li class="demo_li"><a href="favourites.html"><div><i class="fa fa-heart-o"></i></div><div>Favourites</div></a></li>
                 <li class="demo_li"><a href="m.index.html"><div><i class="fa fa-mobile"></i></div><div>Mobile</div></a></li>
                 <li class="demo_li"><a href="exit.html"><div><i class="fa fa-power-off"></i></div><div>Exit</div></a></li>
             </ul>
         </div>
     </div>
 	</div> <!-- posicion -->
-
-	
     <!-- <script src="js/jquery.min.js"></script> -->
     <script src="js/jquery.popmenu.js"></script>
     <script>
@@ -61,17 +59,15 @@
     </script>
 	</header>
 	<section>
-			<div id="chistedeldia"></div>
-	<div id="centro">
-		<div class="slider">
-		<div><a href="https://campusvirtual.unir.net/portal/site/PER5-259-4517" target="_blank"><img src="images/Postgrado-Administracion-Gestion-Servidores-Web-Mensajeria-Electronica.jpg" title="Administración de Servidores Web (ISW) - PER5 2017-2018" alt="texto alterno"></a></div>
-		<div><a href="https://campusvirtual.unir.net/portal/site/PER5-259-4515" target="_blank"><img src="images/Cloud_computing-es.svg/1200px-Cloud_computing-es.svg.png" title="Computación en el Cliente Web (ISW) - PER5 2017-2018" alt="texto alterno"></a></div>
-		<div><a href="https://campusvirtual.unir.net/portal/site/PER5-259-4513" target="_blank"><img src="images/esquema_03.jpg" title="Dirección y Gestión de Proyectos de Software (ISW) - PER5 2017-2018" alt="texto alterno"></a></div>
-		<div><a href="https://campusvirtual.unir.net/portal/site/PER5-259-4512" target="_blank"><img src="images/mapa%2Bconceptual%2Bmetodos%2Bagiles.jpg" title="Metodologías, Desarrollo y Calidad de la Ingeniería de Software (ISW) - PER5 2017-2018" alt="texto alterno"></a></div>
-		<div><a href="https://campusvirtual.unir.net/portal/site/PER5-259-4514" target="_blank"><img src="images/fchp_lenguajes.png" alt="texto alterno" title="Plataformas de Desarrollo de Software (ISW) - PER5 2017-2018"></a></div>
-		<div><a href="https://campusvirtual.unir.net/portal" target="_blank"><img src="images/unir.jpg" alt="texto alterno" title="Unir - Universidad Internacional de la Rioja"></a></div>
-	  </div>
-	</div>  
+    <div id="chistedeldia">
+    </div>
+
+	<div id="centro_elemento">
+       <div class="hojadevida"><a href="https://www.dropbox.com/s/c8h9341gpuljz2t/CV_Oscar_Ortiz-en.pdf?dl=0" target="_blank">English</a></div>
+       <div class="hojadevida"><a href="https://www.dropbox.com/s/umdhuz1ko5wrzev/CV%20Oscar%20Ortiz.pdf?dl=0" target="_blank">Español</a></div>
+       <div class="hojadevida"><a href="https://www.dropbox.com/s/1qdvyxtt8tl3clc/CV_Oscar_Ortiz-pt.docx?dl=0" target="_blank">Portugués</a></div>
+    </div>  
+
 	</section>
 
 	<footer>
